--- a/livetv.html
+++ b/livetv.html
@@ -185,44 +185,33 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 26.12.2024</b>
-        <p>8:00 МСК:</p>
+        <b>Расписание на 27.12.2024</b>
+        <p>9:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02 МСК:</p>
+        <p>9:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20 МСК:</p>
+        <p>С 9:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- Велопрогулка по Подмосковью - Люберцы</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:30 МСК:</p>
+        <p>10:45 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>9:50 МСК:</p>
+        <p>11:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:10 МСК:</p>
+        <p>11:25 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 11:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:00 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>15:20 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:20 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 16:10 МСК:</p>
+        <p>12:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>20:35 МСК:</p>
+        <p>17:10 МСК:</p>
+        <p>- Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>17:45 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>21:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:55 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 21:10 МСК:</p>
+        <p>21:25 МСК:</p>
         <p>Продолжение вещания</p>
    </div>
 </div>
