--- a/index.html
+++ b/index.html
@@ -190,34 +190,43 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 27.12.2024</b>
-        <p>9:00 МСК:</p>
+		<b>Расписание на 28.12.2024</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>9:02 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 9:20 МСК:</p>
+        <p>С 10:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:45 МСК:</p>
+        <p>11:30 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:10 МСК:</p>
+        <p>11:50 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:25 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>17:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>17:45 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>21:10 МСК:</p>
+        <p>С 12:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>17:00 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>17:20 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:25 МСК:</p>
+        <p>17:20 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>С 18:10 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>22:35 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:55 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
