--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 28.12.2024</b>
+		<b>Расписание на 29.12.2024</b>
         <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>10:02 МСК:</p>
@@ -208,25 +208,18 @@ window.onclick = function(event) {
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>12:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 12:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>17:00 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>17:20 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:20 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 18:10 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>22:35 МСК:</p>
+        <p>18:15 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>18:51 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>22:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:55 МСК:</p>
+        <p>22:30 МСК:</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>22:45 МСК:</p>
+        <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
