--- a/livetv.html
+++ b/livetv.html
@@ -185,7 +185,7 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 28.12.2024</b>
+        <b>Расписание на 29.12.2024</b>
         <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>10:02 МСК:</p>
@@ -203,25 +203,18 @@ window.onclick = function(event) {
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>12:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 12:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>17:00 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>17:20 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:20 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 18:10 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>22:35 МСК:</p>
+        <p>18:15 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>18:51 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>22:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:55 МСК:</p>
+        <p>22:30 МСК:</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>22:45 МСК:</p>
+        <p>Продолжение вещания</p>
    </div>
 </div>
   </div><!-- /.entry-content -->
