--- a/index.html
+++ b/index.html
@@ -187,61 +187,41 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 31.12.2024 и 01.01.2025</b>
-        <p>10:00 МСК:</p>
+		<b>Расписание на 01.01.2025</b>
+        <p>15:20 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>10:02 МСК:</p>
+        <p>15:22 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 10:20 МСК:</p>
+        <p>15:40 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 16:05 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:30 МСК:</p>
+        <p>17:30 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:50 МСК:</p>
+        <p>17:50 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:10 МСК:</p>
+        <p>18:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>13:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>14:25 МСК:</p>
-        <p>- К/ф "Страйдер"</p>
-        <p>14:35 МСК:</p>
-        <p>- К/ф "Страйдер 2" <mark>ПРЕМЬЕРА!</mark></p>
-        <p>18:15 МСК:</p>
-        <p>- Реальность полёта</p>
-        <p>18:51 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>21:10 МСК:</p>
-        <p>- К/ф "Черепаха" <mark>ПРЕМЬЕРА!</mark></p>
-        <p>21:35 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>22:54 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:13 МСК:</p>
+        <p>С 18:35 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>23:55 МСК:</p>
-        <p><mark>Новогоднее обращение президента РФ</mark></p>
-        <p>1 января 2025</p>
-        <p>00:05 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 00:30 МСК:</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>02:15 МСК:</p>
+        <p>21:10 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>23:15 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>02:35 МСК:</p>
-        <p>- Там, где море встречается с морем</p>
-        <p>03:16 МСК:</p>
+        <p>23:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>03:35 МСК:</p>
+        <p>23:55 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>04:00 МСК:</p>
-        <p>Перерыв вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
