--- a/livetv.html
+++ b/livetv.html
@@ -185,12 +185,12 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 01.01.2025</b>
-        <p>15:20 МСК:</p>
+        <b>Расписание на 03.01.2025</b>
+        <p>11:20 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>15:22 МСК:</p>
+        <p>11:22 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:40 МСК:</p>
+        <p>11:40 МСК:</p>
         <p>- К/ф "Черепаха"</p>
         <p>С 16:05 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
@@ -199,27 +199,36 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>17:30 МСК:</p>
+        <p>13:30 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>17:50 МСК:</p>
+        <p>13:50 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:10 МСК:</p>
+        <p>14:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 18:35 МСК:</p>
+        <p>С 14:35 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>21:10 МСК:</p>
+        <p>17:10 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>23:15 МСК:</p>
+        <p>19:15 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>23:35 МСК:</p>
+        <p>19:40 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:55 МСК:</p>
+        <p>20:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
+        <p>20:22 МСК:</p>
+        <p>- К/Ф "Черепаха"</p>
+        <p>С 20:50 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
    </div>
 </div>
   </div><!-- /.entry-content -->
