--- a/livetv.html
+++ b/livetv.html
@@ -185,50 +185,59 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 05.01.2025</b>
-        <p>11:20 МСК:</p>
+        <b>Расписание на 6 и 7 января</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>11:22 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:40 МСК:</p>
+        <p>10:22 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 16:05 МСК:</p>
+        <p>С 10:47 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:30 МСК:</p>
+        <p>12:00 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>13:50 МСК:</p>
+        <p>12:20 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>14:10 МСК:</p>
+        <p>12:40 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 14:35 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>17:10 МСК:</p>
+        <p>13:15 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>14:40 МСК:</p>
         <p>- К/ф "Черепаха"</p>
+        <p>15:15 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>15:25 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
         <p>19:15 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>19:40 МСК:</p>
+        <p>- Реальность полёта</p>
+        <p>19:51 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>21:45 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>22:10 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>23:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>20:22 МСК:</p>
-        <p>- К/Ф "Черепаха"</p>
-        <p>С 20:50 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>7 января</p>
+        <p>00:00 МСК:</p>
+        <p><mark>Рождественские куранты</mark></p>
+        <p>00:05 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>00:15 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>С 00:30 МСК:</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
+        <p>01:00 МСК:</p>
+        <p>- К/Ф "Черепаха"</p>
+        <p>01:28 МСК:</p>
+        <p>- Там, где горы встречаются с морем</p>
    </div>
 </div>
   </div><!-- /.entry-content -->
