--- a/index.html
+++ b/index.html
@@ -187,59 +187,50 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 6 и 7 января</b>
-        <p>10:00 МСК:</p>
+		<b>Расписание на 09.01.2025</b>
+        <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>10:02 МСК:</p>
+        <p>8:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:22 МСК:</p>
+        <p>8:20 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 10:47 МСК:</p>
+        <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:00 МСК:</p>
+        <p>10:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>12:20 МСК:</p>
+        <p>10:30 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:40 МСК:</p>
+        <p>10:40 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>13:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>14:40 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>15:15 МСК:</p>
-        <p>- К/ф "Страйдер"</p>
-        <p>15:25 МСК:</p>
-        <p>- К/ф "Страйдер 2"</p>
-        <p>19:15 МСК:</p>
-        <p>- Реальность полёта</p>
-        <p>19:51 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>21:45 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>22:10 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>23:10 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>7 января</p>
-        <p>00:00 МСК:</p>
-        <p><mark>Рождественские куранты</mark></p>
-        <p>00:05 МСК:</p>
-        <p>- К/ф "Страйдер"</p>
-        <p>00:15 МСК:</p>
-        <p>- К/ф "Страйдер 2"</p>
-        <p>С 00:30 МСК:</p>
+        <p>С 11:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>01:00 МСК:</p>
+        <p>13:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>15:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>16:20 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>16:40 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>17:00 МСК:</p>
         <p>- К/Ф "Черепаха"</p>
-        <p>01:28 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
+        <p>С 20:50 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
