--- a/index.html
+++ b/index.html
@@ -187,33 +187,50 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 17.01.2025</b>
-        <p>9:00 МСК:</p>
+		<b>Расписание на 18.01.2025</b>
+        <p>6:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>9:02 МСК:</p>
+        <p>6:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 9:20 МСК:</p>
+        <p>6:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 6:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:45 МСК:</p>
+        <p>8:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:10 МСК:</p>
+        <p>8:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:25 МСК:</p>
+        <p>8:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>17:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>17:45 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>21:10 МСК:</p>
+        <p>С 9:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>11:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>13:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>14:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:25 МСК:</p>
+        <p>14:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>15:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 15:25 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>19:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>20:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 20:30 МСК:</p>
         <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
