--- a/livetv.html
+++ b/livetv.html
@@ -185,51 +185,42 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 18.01.2025</b>
-        <p>6:00 МСК:</p>
+        <b>Расписание на 19.01.2025</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>6:02 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>6:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 6:45 МСК:</p>
+        <p>С 10:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>8:10 МСК:</p>
+        <p>11:30 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>8:35 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:50 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 9:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
         <p>11:50 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>13:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>14:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>14:35 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>15:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 15:25 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>19:55 МСК:</p>
+        <p>14:25 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>14:35 МСК:</p>
+        <p>- К/ф "Страйдер 2" <mark>ПРЕМЬЕРА!</mark></p>
+        <p>18:15 МСК:</p>
+        <p>- Реальность полёта</p>
+        <p>18:51 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>21:10 МСК:</p>
+        <p>- К/ф "Черепаха" <mark>ПРЕМЬЕРА!</mark></p>
+        <p>21:35 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>22:54 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:15 МСК:</p>
+        <p>23:13 МСК:</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 20:30 МСК:</p>
-        <p>Продолжение вещания</p>
    </div>
 </div>
   </div><!-- /.entry-content -->
