--- a/index.html
+++ b/index.html
@@ -187,47 +187,42 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 01.02.2025</b>
+		<b>Расписание на 02.02.2025</b>
         <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 10:45 МСК:</p>
+        <p>С 10:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
+        <p>11:30 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:50 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>12:10 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>12:35 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 13:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:50 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>17:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>18:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:35 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>19:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 19:25 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>23:55 МСК:</p>
+        <p>14:25 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>14:35 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>18:15 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>18:51 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>21:10 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>21:35 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>22:54 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:13 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
