--- a/index.html
+++ b/index.html
@@ -187,34 +187,40 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 07.02.2025</b>
-        <p>9:00 МСК:</p>
+		<b>Расписание на 09.02.2025</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>9:02 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 9:20 МСК:</p>
+        <p>С 10:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:45 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:10 МСК:</p>
+        <p>12:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:25 МСК:</p>
+        <p>12:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>17:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>17:45 МСК:</p>
+        <p>15:15 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>15:25 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>19:15 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>19:51 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>21:10 МСК:</p>
+        <p>21:45 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>22:10 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>23:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:25 МСК:</p>
-        <p>Продолжение вещания</p>
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
