--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@ window.onclick = function(event) {
 	<a href="https://vk.com/rayka_and_layka_new"><i class="demo-icon icon-link-ext">&#xf08e;</i>Сообщество ВК</a><br>
 	<a href="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df"><i class="demo-icon icon-link-ext">&#xf08e;</i>Канал в Яндекс Мессенджере</a>
 	<br>
-	<a href="https://discord.gg/5HRFCZV8PN"><i class="demo-icon icon-link-ext">&#xf08e;</i>Дискорд сервер</a>
 </div>
 <div class="rabota">
 	<a class="rabota" href="/rabota"><p>Стать частью команды</p></a>
@@ -187,51 +186,40 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 10.02.2025</b>
-        <p>8:00 МСК:</p>
+		<b>Расписание на 12.02.2025</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 8:45 МСК:</p>
+        <p>С 10:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:10 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:35 МСК:</p>
+        <p>12:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:50 МСК:</p>
+        <p>12:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 11:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:50 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>15:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>16:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:35 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>17:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 17:25 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>21:55 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:15 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 22:30 МСК:</p>
+        <p>15:15 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>15:25 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>19:15 МСК:</p>
+        <p>- Реальность полёта</p>
+        <p>19:51 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>21:45 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>22:10 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>23:10 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
