--- a/index.html
+++ b/index.html
@@ -186,51 +186,42 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 22.02.2025</b>
-        <p>6:00 МСК:</p>
+		<b>Расписание на 23.02.2025</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>6:02 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>6:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 6:45 МСК:</p>
+        <p>С 10:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>8:10 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>8:35 МСК:</p>
+        <p>12:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:50 МСК:</p>
+        <p>12:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 9:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:50 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>13:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>14:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>14:35 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>15:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 15:25 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>19:55 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:15 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 20:30 МСК:</p>
+        <p>15:05 МСК:</p>
+        <p>- Короткометражный фильм "ПОМНИ" <mark>ПРЕМЬЕРА!</mark></p>
+        <p>15:15 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>15:25 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>19:15 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>19:51 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>21:45 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>22:10 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>23:10 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
