--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ window.onclick = function(event) {
 </div>
 
 <div class="title1">
-		<b>Прямой эфир телеканала</b><br>
+		<b>Прямой эфир</b><br>
 		<!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark><br> -->
 		<!-- <mark>Запись вещания:</mark> -->
 </div>
@@ -186,7 +186,7 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 03.03.2025</b>
+		<b>Расписание на 04.03.2025</b>
         <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>8:02 МСК:</p>
