--- a/livetv.html
+++ b/livetv.html
@@ -178,14 +178,14 @@ window.onclick = function(event) {
 </div>
 
 <div class='ob'>
-     <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
+     <h1 class='Nashi_horse'>Вещание:<h1>
      <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark> -->
      <!-- <p>Запись вещания:</p> -->
      <div class="video">
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 03.03.2025</b>
+        <b>Расписание на 04.03.2025</b>
         <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>8:02 МСК:</p>
