--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 08.03.2025</b>
+		<b>Расписание на 09.03.2025</b>
         <p>9:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>9:02 МСК:</p>
@@ -206,7 +206,7 @@ window.onclick = function(event) {
         <p>12:15 МСК:</p>
         <p>Продолжение вещания</p>
         <p>17:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>- Там, где горы встречаются с морем <mark>По воскресеньям</mark></p>
         <p>17:45 МСК:</p>
         <p>Продолжение вещания</p>
         <p>21:10 МСК:</p>
