--- a/index.html
+++ b/index.html
@@ -186,39 +186,51 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 30.04.2025</b>
-        <p>7:00 МСК:</p>
+        <b>Расписание на 01.05.2025</b>
+        <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>7:02 МСК:</p>
+        <p>8:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 7:20 МСК:</p>
+        <p>8:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 8:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>8:45 МСК:</p>
+        <p>10:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>9:10 МСК:</p>
+        <p>10:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:25 МСК:</p>
+        <p>10:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>15:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>15:45 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>19:10 МСК:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>19:45 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:10 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>22:35 МСК:</p>
+        <p>С 11:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>22:50 МСК:</p>
-        <p>- Короткометражный фильм "Страйдер 2"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>13:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>15:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>16:15 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>16:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>17:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 17:25 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>21:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 22:30 МСК:</p>
+        <p>Продолжение вещания</p>
 
 
 
