--- a/livetv.html
+++ b/livetv.html
@@ -185,35 +185,47 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 02.05.2025</b>
+        <b>Расписание на 03.05.2025</b>
         <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 10:20 МСК:</p>
+        <p>10:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 10:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:45 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
         <p>12:10 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>12:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:25 МСК:</p>
+        <p>12:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>13:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>18:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>18:45 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>22:10 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>22:45 МСК:</p>
+        <p>С 13:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>15:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>17:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>18:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:10 МСК:</p>
+        <p>18:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>19:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 19:25 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>23:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
 
 
 
