--- a/index.html
+++ b/index.html
@@ -186,34 +186,50 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 07.05.2025</b>
-        <p>8:00 МСК:</p>
+        <b>Расписание на 08.05.2025</b>
+        <p>7:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02 МСК:</p>
+        <p>7:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20 МСК:</p>
+        <p>7:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 7:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:45 МСК:</p>
+        <p>9:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:10 МСК:</p>
+        <p>9:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25 МСК:</p>
+        <p>9:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>16:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>16:45 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>20:10 МСК:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>20:45 МСК:</p>
+        <p>С 11:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>12:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>14:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>15:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:10 МСК:</p>
+        <p>15:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>16:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 16:25 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>20:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>21:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 21:30 МСК:</p>
         <p>Продолжение вещания</p>
 
 
