--- a/index.html
+++ b/index.html
@@ -186,56 +186,48 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 09.05.2025</b>
-        <p>9:00 МСК:</p>
-        <p>- К/ф "Помни!"</p>
-        <p>9:11 МСК:</p>
+        <b>Расписание на 10.05.2025</b>
+        <p>11:00 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>11:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 9:30 МСК:</p>
+        <p>11:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 11:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:45 МСК:</p>
+        <p>13:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:10 МСК:</p>
+        <p>13:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:25 МСК:</p>
+        <p>13:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:00 МСК:</p>
-        <p>- К/ф "Помни!"</p>
-        <p>12:10 МСК:</p>
-        <p>- К/ф "Семейная связь"</p>
-        <p>12:30 МСК:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>12:55 МСК:</p>
-        <p>- К/ф "Чудеса случаются"</p>
-        <p>13:30 МСК:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>14:30 МСК:</p>
-        <p>- К/ф "Страйдер"</p>
-        <p>14:40 МСК:</p>
-        <p>- К/ф "Страйдер 2"</p>
-        <p>15:25 МСК:</p>
-        <p>- К/ф "Помни!"</p>
-        <p>15:35 МСК:</p>
-        <p>- К/ф "Семейная связь"</p>
-        <p>16:05 МСК:</p>
-        <p>- К/ф "Скейт"</p>
-        <p>16:18 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:35 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>18:45 МСК:</p>
-        <p>- К/ф "Помни!"</p>
+        <p>С 14:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>16:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
         <p>18:55 МСК:</p>
-        <p>- К/ф "Семейная связь"</p>
+        <p>- К/Ф "ЭГО"</p>
         <p>19:15 МСК:</p>
-        <p>- К/ф "Страйдер"</p>
-        <p>19:25 МСК:</p>
-        <p>- К/ф "Страйдер 2"</p>
-        <p>19:40 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>19:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>20:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 20:25 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>23:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+
 
 
 
