--- a/index.html
+++ b/index.html
@@ -186,47 +186,56 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 10.05.2025</b>
+        <b>Расписание на 11.05.2025</b>
         <p>11:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>11:02 МСК:</p>
+        <p>- К/ф "Помни!"</p>
+        <p>11:11 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 11:45 МСК:</p>
+        <p>С 11:30 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
+        <p>12:45 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
         <p>13:10 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>13:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:50 МСК:</p>
+        <p>13:25 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 14:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>16:50 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>18:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>19:15 МСК:</p>
+        <p>14:00 МСК:</p>
+        <p>- К/ф "Помни!"</p>
+        <p>14:10 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
+        <p>14:30 МСК:</p>
+        <p>- К/ф "Беседа"</p>
+        <p>14:55 МСК:</p>
+        <p>- К/ф "Чудеса случаются"</p>
+        <p>15:30 МСК:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>16:30 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>16:40 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>17:25 МСК:</p>
+        <p>- К/ф "Помни!"</p>
+        <p>17:35 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
+        <p>18:05 МСК:</p>
+        <p>- К/ф "Скейт"</p>
+        <p>18:18 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>19:35 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>20:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 20:25 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>20:45 МСК:</p>
+        <p>- К/ф "Помни!"</p>
+        <p>20:55 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
+        <p>21:15 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>21:25 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>21:40 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>23:55 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
 
 
 
